buildscript {
    repositories {
        maven {
            url = 'https://plugins.gradle.org/m2/'
        }
    }
}

plugins {
    id 'java-library'
    id 'com.gradleup.shadow' version '9.4.1'
}

allprojects  {
    apply plugin: 'maven-publish'
    group = 'logbook-kai-plugins'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'com.gradleup.shadow'

    ext {
        vendor = '@rsky'
        license = 'MIT'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    def lombokVersion = '1.18.46'
    def jUnitVersion = '5.14.4'
    def jUnitPlatformVersion = '1.14.4'
    def mockitoVersion = '2.28.2'
    def powerMockVersion = '2.0.9'

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly files("$rootDir/lib/logbook-kai.jar")
        testImplementation files("$rootDir/lib/logbook-kai.jar")
        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"
        testCompileOnly "org.projectlombok:lombok:$lombokVersion"
        testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-api:$jUnitVersion"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jUnitVersion"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher:$jUnitPlatformVersion"
        testImplementation 'org.apiguardian:apiguardian-api:1.1.2' // suppress warning on test
        testImplementation "org.mockito:mockito-core:$mockitoVersion"
        testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
    }

    test {
        useJUnitPlatform()
    }

    shadowJar {
    }
}
